--- a/pkg/views/index.html
+++ b/pkg/views/index.html
@@ -1,33 +1,39 @@
 {{ define "content" }}
-    <table border="">
-        <thead>
-            <th>Id</th>
-            <th>Isbn</th>
-            <th>Name</th>
-            <th>Author</th>
-            <th>Pages</th>
-            <th>Year</th>
-            <th>AddedOn</th>
-            <th>Action</th>
-        </thead>
-        <tbody>
-            {{ range $key, $value := .books }}
-                <tr>
-                    <td>{{ $value.Id }}</td>
-                    <td>{{ $value.Isbn }}</td>
-                    <td>{{ $value.Name }}</td>
-                    <td>{{ $value.Author }}</td>
-                    <td>{{ $value.Pages }}</td>
-                    <td>{{ $value.Year }}</td>
-                    <td>{{ $value.Addedon }}</td>
-                    <td>
-                        <div style="display: flex; align-items: center; justify-content: space-between">
-                            <div style="color: green">Изменить</div>
-                            <div style="color: red">Удалить</div>
-                        </div>
-                    </td>
-                </tr>
-            {{ end }}
-        </tbody>
-    </table>
+    <div class="container mt-3">
+        <h1>Таблица со списком всех книг</h1>
+        <table class="table mt-3">
+            <thead>
+                <th>Id</th>
+                <th>Isbn</th>
+                <th>Name</th>
+                <th>Author</th>
+                <th>Pages</th>
+                <th>Year</th>
+                <th>AddedOn</th>
+                <th>Action</th>
+            </thead>
+            <tbody>
+                {{ range $key, $value := .books }}
+                    <tr>
+                        <td>{{ $value.Id }}</td>
+                        <td>{{ $value.Isbn }}</td>
+                        <td>{{ $value.Name }}</td>
+                        <td>{{ $value.Author }}</td>
+                        <td>{{ $value.Pages }}</td>
+                        <td>{{ $value.Year }}</td>
+                        <td>{{ $value.Addedon }}</td>
+                        <td>
+                            <div style="display: flex; align-items: center; justify-content: space-between">
+                                <a href="/book/{{ $value.Id }}" type="button" class="btn btn-primary">Читать</a>
+                                <a href="/book/update/{{ $value.Id }}" type="button" class="btn btn-success">Изменить</a>
+                                <form action="/book/delete/{{ $value.Id }}" method="POST">
+                                    <button type="submit" class="btn btn-danger">Удалить</button>
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                {{ end }}
+            </tbody>
+        </table>
+    </div>
 {{ end }}
