--- a/pkg/views/index.html
+++ b/pkg/views/index.html
@@ -1,6 +1,9 @@
 {{ define "content" }}
     <div class="container mt-3">
-        <h1>Таблица со списком всех книг</h1>
+        <div class="mt-3 d-flex align-items-center justify-content-between">
+            <h1>Таблица со списком всех книг</h1>
+            <a href="/book" type="button" class="btn btn-success">Добавить новую книгу</a>
+        </div>
         <table class="table mt-3">
             <thead>
                 <th>Id</th>
